[BlinkGenPropertyTrees] Run DocumentAnimations::UpdateAnimations for svg

This patch runs DocumentAnimations::UpdateAnimations for svg images,
matching the SPV2 codepath. The corresponding non-svg-image
UpdateAnimations call is behind a SPV2 || BGPT conditional in
local_frame_view.cc.

Bug: 854198
Cq-Include-Trybots: luci.chromium.try:linux-blink-gen-property-trees;luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: If5132139cb7dcf0add0227c189f73809933a20c3
Reviewed-on: https://chromium-review.googlesource.com/1107098
Reviewed-by: Tien-Ren Chen <trchen@chromium.org>
Commit-Queue: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568669}
Former-commit-id: 10752e4ff38d605681896e04196e2b5eca0cfef7